--- a/00_pytorch_fundamentals.ipynb
+++ b/00_pytorch_fundamentals.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4"
+      "authorship_tag": "ABX9TyNet7JNbNBH3y5D6USix2yZ",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -12,10 +13,19 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Mehul27/pytorch-deep-learning/blob/main/00_pytorch_fundamentals.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -29,13 +39,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "_go8YSzOtEHC",
-        "outputId": "9aa077c7-1945-426a-925d-15fc0fd4cfca"
+        "outputId": "ee31a46f-39c5-4784-8ac8-90f4d7ff4545"
       },
       "outputs": [
         {
@@ -52,44 +62,517 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Introduction to Tensors\n",
+        "\n",
+        "### Creating tensors\n",
+        "\n",
+        "PyTorch tensors are created using `torch.tensor()`"
+      ],
+      "metadata": {
+        "id": "_1uCToepCVnj"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "!nvidia-smi"
+        "# scalar\n",
+        "scalar = torch.tensor(7)\n",
+        "scalar"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "wwVy3WSTCBlN",
-        "outputId": "3878316e-2e30-4b26-f141-c545b224c285"
+        "id": "jgVWOVwfvDkS",
+        "outputId": "9592aa06-0dc0-4e21-b1c0-658821932843"
       },
-      "execution_count": 2,
+      "execution_count": 11,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Tue Mar 25 06:41:59 2025       \n",
-            "+-----------------------------------------------------------------------------------------+\n",
-            "| NVIDIA-SMI 550.54.15              Driver Version: 550.54.15      CUDA Version: 12.4     |\n",
-            "|-----------------------------------------+------------------------+----------------------+\n",
-            "| GPU  Name                 Persistence-M | Bus-Id          Disp.A | Volatile Uncorr. ECC |\n",
-            "| Fan  Temp   Perf          Pwr:Usage/Cap |           Memory-Usage | GPU-Util  Compute M. |\n",
-            "|                                         |                        |               MIG M. |\n",
-            "|=========================================+========================+======================|\n",
-            "|   0  Tesla T4                       Off |   00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   50C    P8             10W /   70W |       0MiB /  15360MiB |      0%      Default |\n",
-            "|                                         |                        |                  N/A |\n",
-            "+-----------------------------------------+------------------------+----------------------+\n",
-            "                                                                                         \n",
-            "+-----------------------------------------------------------------------------------------+\n",
-            "| Processes:                                                                              |\n",
-            "|  GPU   GI   CI        PID   Type   Process name                              GPU Memory |\n",
-            "|        ID   ID                                                               Usage      |\n",
-            "|=========================================================================================|\n",
-            "|  No running processes found                                                             |\n",
-            "+-----------------------------------------------------------------------------------------+\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(7)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "scalar.ndim"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "h4fCb5nPvgqH",
+        "outputId": "59b17fb8-dc8f-443b-ddc0-02e169c88260"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Get tensor back as python int\n",
+        "scalar.item()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "W9YjwK8bx2m4",
+        "outputId": "ba3b54a4-eabb-429f-cec6-e61185308e34"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "7"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vector = torch.tensor([7, 7])\n",
+        "vector"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8ypqB15nyBBJ",
+        "outputId": "ab41b8e1-41fd-4b9b-f243-e5cbfcf71ac2"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([7, 7])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vector.ndim"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "q1VF8usjyKag",
+        "outputId": "04d849e1-1fad-401b-9f39-18086e2de46c"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vector.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kp11o3mfyWBb",
+        "outputId": "beafc098-8fc9-4472-f7c0-5ae903ec7325"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([2])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "MATRIX = torch.tensor([[7,8],\n",
+        "                       [9, 10]])\n",
+        "MATRIX"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IUrp9JxvyeQK",
+        "outputId": "9fb49154-e263-46f3-a098-5cb3eed9ea8b"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[ 7,  8],\n",
+              "        [ 9, 10]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "MATRIX.ndim"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lLsvVsyzyqCR",
+        "outputId": "50d5a02f-bd8b-4740-d332-97bc87c39bc9"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "MATRIX.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-BvSnASNysSb",
+        "outputId": "1deb23a3-4169-4f8b-a1f3-42cf2715b0af"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([2, 2])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "TENSOR = torch.tensor([[[1, 2, 3],\n",
+        "                       [3, 6, 9],\n",
+        "                       [2, 4, 5]]])\n",
+        "TENSOR"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "q9BoI3jWyucg",
+        "outputId": "ccc82c3b-03ce-4333-a553-b7b41b389515"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[1, 2, 3],\n",
+              "         [3, 6, 9],\n",
+              "         [2, 4, 5]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "TENSOR.ndim"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ETi2iKPDzbxA",
+        "outputId": "9e8e47a1-eaea-4de4-e22a-24fae01f622d"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "TENSOR.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eqplXx5HztP9",
+        "outputId": "c0980761-cbed-4ad1-e24e-6ad449dd74b7"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([1, 3, 3])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "TENSOR[0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "U9FMgdAHzvOs",
+        "outputId": "56247950-c47b-452c-b0ab-e74d70d2cb67"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1, 2, 3],\n",
+              "        [3, 6, 9],\n",
+              "        [2, 4, 5]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "TENSOR2 = torch.tensor([[[[1, 2],[3, 4]], [[5, 6], [7, 8]]], [[[2, 1],[4, 3]], [[6, 5], [8, 7]]]])\n",
+        "TENSOR2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hLMGxC28z7Jm",
+        "outputId": "6b3dcdce-ecbe-487e-f4b7-d8d710ae931a"
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[[1, 2],\n",
+              "          [3, 4]],\n",
+              "\n",
+              "         [[5, 6],\n",
+              "          [7, 8]]],\n",
+              "\n",
+              "\n",
+              "        [[[2, 1],\n",
+              "          [4, 3]],\n",
+              "\n",
+              "         [[6, 5],\n",
+              "          [8, 7]]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 45
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "TENSOR2.ndim"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IDeQUOXe0fhO",
+        "outputId": "8068ccf0-6e38-4d21-89b7-c2b9dba0949b"
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "TENSOR2.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NcO7vwVF0m6b",
+        "outputId": "bd074c87-c3fb-4f2c-f221-462779e27d63"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([2, 2, 2, 2])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 47
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "TENSOR2[0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VY5e5lJz0rBK",
+        "outputId": "13ab82ee-f1a5-4b2d-9edb-699f030e1a5a"
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[1, 2],\n",
+              "         [3, 4]],\n",
+              "\n",
+              "        [[5, 6],\n",
+              "         [7, 8]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 48
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "TENSOR2[1]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3bMq0QO804X6",
+        "outputId": "03a8952c-990d-48cb-fb47-29c3496132c1"
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[2, 1],\n",
+              "         [4, 3]],\n",
+              "\n",
+              "        [[6, 5],\n",
+              "         [8, 7]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 49
         }
       ]
     },
@@ -97,7 +580,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "_1uCToepCVnj"
+        "id": "7FSCH-Uh0_qF"
       },
       "execution_count": null,
       "outputs": []
