--- a/00_pytorch_fundamentals.ipynb
+++ b/00_pytorch_fundamentals.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNet7JNbNBH3y5D6USix2yZ",
+      "authorship_tag": "ABX9TyP865vAUZIPJx7/RsRyRiMh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -577,10 +577,333 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Random tensors\n",
+        "\n",
+        "Why random tensors?\n",
+        "\n",
+        "Important because the way many NN learn is that they start with tensors full of random numbers and then adjust those random numbers to better represent the data\n",
+        "\n",
+        "`Start with random numbers -> look at data -> update random numbers -> look at data -> update random numbers`"
+      ],
+      "metadata": {
+        "id": "7FSCH-Uh0_qF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create a random tensor of size (3, 4)\n",
+        "\n",
+        "random_tensor = torch.rand(2, 5, 4)\n",
+        "random_tensor"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZcPXaCVL1zdT",
+        "outputId": "0edf1fa7-fce0-4069-abe3-9be337508662"
+      },
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[0.1980, 0.1922, 0.5915, 0.8076],\n",
+              "         [0.9269, 0.1661, 0.1063, 0.3365],\n",
+              "         [0.1560, 0.0078, 0.9920, 0.3123],\n",
+              "         [0.6334, 0.2893, 0.2715, 0.4677],\n",
+              "         [0.1700, 0.5680, 0.7584, 0.5710]],\n",
+              "\n",
+              "        [[0.7506, 0.8735, 0.6591, 0.7733],\n",
+              "         [0.9114, 0.0765, 0.1689, 0.7292],\n",
+              "         [0.0273, 0.7508, 0.7887, 0.9984],\n",
+              "         [0.4950, 0.4176, 0.0707, 0.3357],\n",
+              "         [0.1120, 0.3788, 0.4062, 0.8487]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 58
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "random_tensor.ndim"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nhBVFCPq2Vwm",
+        "outputId": "3bb91363-9d66-4d81-ea0d-690faf48fe52"
+      },
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 59
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "random_tensor.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "77M3KVYk2ehq",
+        "outputId": "d1da85ae-e7e8-4607-b81d-8537d3f4a51b"
+      },
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([2, 5, 4])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 60
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create a random tensor with similar shape to an image tensor\n",
+        "\n",
+        "random_image_size_tensor = torch.rand(size = (224, 224, 3)) # height, width, color channel (RGB)\n",
+        "random_image_size_tensor.shape, random_image_size_tensor.ndim"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OoiIvIXw2efU",
+        "outputId": "3b8184c3-2e4b-4317-832a-bfba2d8ea096"
+      },
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(torch.Size([224, 224, 3]), 3)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 63
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Zeros and ones"
+      ],
+      "metadata": {
+        "id": "gO7RhzPs2edB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create a tensor of all zeros\n",
+        "\n",
+        "zeros = torch.zeros(3,4)\n",
+        "zeros"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HmFUK3qH2eaB",
+        "outputId": "8d95ca32-4b20-40c7-cb47-f816cb2676f7"
+      },
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0., 0., 0., 0.],\n",
+              "        [0., 0., 0., 0.],\n",
+              "        [0., 0., 0., 0.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 64
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create a tensor of all ones\n",
+        "\n",
+        "ones = torch.ones(3,4)\n",
+        "ones"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "m7ybUNGn9CD3",
+        "outputId": "adf20bba-ffd2-4168-dc9e-d518b3faff0a"
+      },
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1., 1., 1., 1.],\n",
+              "        [1., 1., 1., 1.],\n",
+              "        [1., 1., 1., 1.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 65
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ones.dtype"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GkVF4aKM9Hfj",
+        "outputId": "c710c02b-4eab-4e23-fd4d-33a000acf52c"
+      },
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.float32"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 66
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "random_tensor.dtype"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "faaSsJ149JWb",
+        "outputId": "46a4f432-4c88-410e-d3dc-d7568dfcfec5"
+      },
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.float32"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 68
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Creating a range of tensors and tensors-like"
+      ],
+      "metadata": {
+        "id": "xS2vd6bk9Lam"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Use torch.range\n",
+        "one_to_ten = torch.arange(start=1, end=11, step=1)\n",
+        "one_to_ten"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Z-iGiZSo9gt5",
+        "outputId": "b955c562-a038-4ab9-ff4a-719272ba1377"
+      },
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 73
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Creating tensors like\n",
+        "ten_zeros = torch.zeros_like(input=one_to_ten)\n",
+        "ten_zeros"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PyWLTirs9rec",
+        "outputId": "d603e1f9-3de0-414e-a664-e6f9ad1082f4"
+      },
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([0, 0, 0, 0, 0, 0, 0, 0, 0, 0])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 74
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "7FSCH-Uh0_qF"
+        "id": "CoD8duKX-TZ9"
       },
       "execution_count": null,
       "outputs": []
